--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
 <nav>
 </nav>
 <main>
-        <h2>CIT 230 - Assignment Portal.</h2>
+      <h2>CIT 230 - Assignment Portal.</h2>
+      <ul>
         <li>Lesson #2: <a href="#">Assignment Label</a></li>
+        <li>Lesson #3: <a href="/assignments/lesson-3/fixedhtml.html">HTML Markup Validation</a></li>
+        <li>Lesson #4: <a href="#">Start the Town Weather Page Build</a></li>
+      </ul>
 </main>
 <footer>
     <p>&copy; 2018 Taylor Williams Utah <a href="http://www.byui.edu/online">BYU-Idaho Online Learning</a></p>
