--- a/assignments/lesson-3/fixedhtml.html
+++ b/assignments/lesson-3/fixedhtml.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-      <title>Untitled Document</title>
-      <meta name="description" content="The Quad-Cities Transporation Center has been serving the region for over 30 years.">
-      <link rel="stylesheet" href="styles/main.css">     
+        <title>The Quad-Cities Transporation Center</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+        <meta name="author" content="Taylor Williams">
+        <meta name="description" content="The Quad-Cities Transporation Center has been serving the region for over 30 years.">
+        <link rel="stylesheet" href="styles/main.css">     
   </head>
   <body>
     <header>
