--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <ul>
         <li>Lesson #2: <a href="#">Semantic HTML and Basic CSS</a></li>
         <li>Lesson #3: <a href="assignments/lesson-3/fixedhtml.html">HTML Markup Validation</a></li>
-        <li>Lesson #4: <a href="#">Start the Town Weather Page Build</a></li>
+        <li>Lesson #4: <a href="assignments/lesson-4/StiePlanTaylorWilliams230.pdf">Weather Site Plan</a></li>
       </ul>
 </main>
 <footer>
