--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/main.css">
 
   </head>
+  <body>
   <header>
       <h1>Taylor Williams</h1> <img src="img/profile.jpg"/>
 </header>
@@ -28,5 +29,5 @@
 <footer>
     <p>&copy; 2018 Taylor Williams Utah <a href="http://www.byui.edu/online">BYU-Idaho Online Learning</a></p>
 </footer>
-
+</body>
 </html>
