--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <li>Lesson #2: <a href="#">Semantic HTML and Basic CSS</a></li>
         <li>Lesson #3: <a href="assignments/lesson-3/fixedhtml.html">HTML Markup Validation</a></li>
         <li>Lesson #4: <a href="assignments/lesson-4/StiePlanTaylorWilliams230.pdf">Weather Site Plan</a></li>
+        <li>Lesson #4: <a href="assignments/lesson-4/town-template.html">Town Template</a></li>
       </ul>
 </main>
 <footer>
