--- a/assignments/lesson-5/perston-5.html
+++ b/assignments/lesson-5/perston-5.html
@@ -32,7 +32,7 @@
             </div>
         </header>
         <nav>
-            <ul class="nav">
+            <ul class="nav container">
                 <li>
                 <a href="#" onclick="">Menu</a>
                 </li>
