--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <li>Lesson #3: <a href="assignments/lesson-3/fixedhtml.html">HTML Markup Validation</a></li>
         <li>Lesson #4: <a href="assignments/lesson-4/StiePlanTaylorWilliams230.pdf">Weather Site Plan</a></li>
         <li>Lesson #4: <a href="assignments/lesson-4/town-template.html">Town Template</a></li>
+        <li>Lesson #4: <a href="assignments/lesson-5/perston-5.html">Build Town Page</a></li>
       </ul>
 </main>
 <footer>
