--- a/assignments/lesson-6/perston-6.html
+++ b/assignments/lesson-6/perston-6.html
@@ -10,8 +10,8 @@
 
     <title>CIT 230 Weather Project | Taylor Williams | BYU-Idaho</title>
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/large-5.css">
-    <link rel="stylesheet" href="css/small-5.css">
+    <link rel="stylesheet" href="css/large-6.css">
+    <link rel="stylesheet" href="css/small-6.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
   </head>
@@ -63,7 +63,7 @@
         <main class="container">
             <h1>The Town of Preston</h1>
             <div class="divHero">
-                <img src="images/peston-hero.jpg" alt="hero pic" class="hero">
+                <img src="images/franklin-original.jpeg" alt="hero pic" class="hero">
                 <section class="weathersummary">
                     <h3>Weather Summary</h3>
                     <div class="weatherdetails">
