--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <li>Lesson #4: <a href="assignments/lesson-4/StiePlanTaylorWilliams230.pdf">Weather Site Plan</a></li>
         <li>Lesson #4: <a href="assignments/lesson-4/town-template.html">Town Template</a></li>
         <li>Lesson #5: <a href="assignments/lesson-5/perston-5.html">Build Town Page</a></li>
+        <li>Lesson #6: <a href="assignments/lesson-6/perston-6.html">Responsive Design</a></li>
       </ul>
 </main>
 <footer>
