--- a/assignments/lesson-6/perston-6.html
+++ b/assignments/lesson-6/perston-6.html
@@ -35,30 +35,28 @@
         </header>
         <nav>
             <div class="container">
-            <ul class="nav">
-                <li>
-                <a href="#" onclick="">Menu</a>
-                </li>
-                <li>
-                <a href="#">Home</a>
-                </li>
-                <li>
-                <a href="#">Preston</a>
-                </li>
-                <li>
-                <a href="#">Soda Springs</a>
-                </li>
-                <li>
-                <a href="#">Fish Haven</a>
-                </li>
-                <li>
-                <a href="#">Storm Center</a>
-                </li>
-                <li>
-                <a href="#">Gallery</a>
-                </li>
-            </ul>
-        </div>
+                <button id="showPhoneNav">Menu</button>
+                <ul id="myNav" class="clearfix container nav" style="overflow: hidden; display: none;">
+                    <li>
+                    <a href="#">Home</a>
+                    </li>
+                    <li>
+                    <a href="#">Preston</a>
+                    </li>
+                    <li>
+                    <a href="#">Soda Springs</a>
+                    </li>
+                    <li>
+                    <a href="#">Fish Haven</a>
+                    </li>
+                    <li>
+                    <a href="#">Storm Center</a>
+                    </li>
+                    <li>
+                    <a href="#">Gallery</a>
+                    </li>
+                </ul>
+            </div>
         </nav>
         <main class="container">
             <h1>The Town of Preston</h1>
@@ -107,10 +105,23 @@
             </section>
             <article>
                 <div class="article">
-                    <h2></h2>
-                    <h4></h4>
+                    <h2>Franklins National day</h2>
+                    <h4>by: Taylor Williams</h4>
                 </div>
                 <img class="pic-article"/>
+                <div class="articleContent">
+                    <p>Lorem ipsum dolor sit amet, modus democritum cu mei. Sea at regione lucilius. 
+                    Per ut voluptua percipit, duo in sumo viris detracto, nonumy detracto tincidunt in duo. 
+                    Est gubergren reprimique ei, inermis blandit at vel, nibh simul an duo.
+                    </p>
+
+                    <p>Ex has liber option quaeque, sea id purto putant sensibus. Sit in equidem sadipscing
+                    scribentur, meis invenire ea has, pri epicurei appellantur eu. Id nam animal ancillae 
+                    theophrastus. Ea facete everti interesset sea, duo noster denique te. No sea error dissentiunt, 
+                    cu oblique ornatus pro. Duis ullum quaestio in usu, persius phaedrum constituto sea ne, qui 
+                    tamquam omittantur ne.</p>
+
+                </div>
             </article>
         
             <div class="contact">
@@ -119,9 +130,9 @@
                 </div>
                 <div class="col-3">
                     <ul class="address">
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>This is the address</li>
+                        <li>123 street 944</li>
+                        <li>Preston ID</li>
                     </ul>
                     <ul class="info">
                         <li></li>
