--- a/assignments/lesson-7/perston-7.html
+++ b/assignments/lesson-7/perston-7.html
@@ -41,7 +41,7 @@
                          images/perston-wide/perston-large.jpeg 1100w">
         </figure>
         <section class="weather">
-            <h2>Franklin</h2>
+            <h2>Preston</h2>
             <h3>Weather Summary</h3>
             <div class="current">
                 <p class = "status">Sunny</p>
@@ -96,7 +96,7 @@
     </section>
       
       <article class="town-article">
-        <h3 class="article-head">Franklin Breaks Record</h3>	
+        <h3 class="article-head">Preston Breaks Record</h3>	
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sagittis lobortis sem ut pellentesque. Fusce aliquam ex metus, sollicitudin congue ligula vulputate id. In aliquet lacus lorem, a varius neque egestas quis. Duis varius justo risus, sit amet euismod diam vulputate et. Sed sed sagittis dolor, eget eleifend lorem. Etiam ac scelerisque tortor. Aliquam rutrum, arcu ut posuere venenatis, massa tortor tempor nisl, non porta mauris quam in leo. Nulla feugiat viverra lorem quis ultricies. Pellentesque nec ex neque. Integer nec mollis sapien. Vivamus vitae enim non dolor suscipit efficitur. Nam vestibulum imperdiet massa, quis interdum libero molestie quis. Nullam aliquam ligula orci, vitae tristique enim interdum in. Ut id dui purus. Phasellus scelerisque rutrum fringilla. Mauris facilisis ex risus, pulvinar pharetra risus consequat sit amet.
         </p>
@@ -115,7 +115,7 @@
     <aside>
         
         123 Main St.<br>
-        Franklin, MU 83454<br>
+        Preston, MU 83454<br>
         (555)555-5555<br>
         contact@support.gov<br>
     </aside>
