--- a/assignments/lesson-7/perston-7.html
+++ b/assignments/lesson-7/perston-7.html
@@ -36,7 +36,7 @@
   <main>
     <div class="sideBySide">
         <figure>
-          <img src = "images/perston-wide/perston-original.jpeg" alt = "Franklin" sizes = "100vw"
+          <img src = "images/perston-wide/perston-original.jpeg" alt = "Preston" sizes = "100vw"
                srcset = "images/perston-wide/perston-small.jpeg 500w,
                          images/perston-wide/perston-large.jpeg 1100w">
         </figure>
