--- a/assignments/lesson-7/perston-7.html
+++ b/assignments/lesson-7/perston-7.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Perston Weather | Dew Report</title>
+    <title>Perston Weather | UI Weather</title>
     <meta name="author" content="Taylor Williams">
     <meta name="description" content="Perston Weather Page">
     <!-- external style references in the proper cascading order -->    
@@ -17,7 +17,7 @@
 
   <header>
     <img src="images/trial-sun.jpg" alt="The site logo">
-    <h1>Dew Report</h1>
+    <h1>UI Weather</h1>
     <div class="subheading">Leave Getting Wet To The Grass</div>
   </header>
 
@@ -119,7 +119,7 @@
         (555)555-5555<br>
         contact@support.gov<br>
     </aside>
-    <p class="footer-bar">&copy;2017 All Rights Reserved | Dew Report | <span id="currentdate"></span></p>
+    <p class="footer-bar">&copy;2017 All Rights Reserved | UI Weather | <span id="currentdate"></span></p>
   </footer>
 
   <script src="scripts/hamburger.js"></script>
