--- a/assignments/lesson-7/gallery-7.html
+++ b/assignments/lesson-7/gallery-7.html
@@ -24,11 +24,11 @@
         <button onclick="toggleNavMenu()">&#9776;</button>
         <ul id="primaryNav" class="hide">
             <li><a href="#">Home</a></li>
-            <li><a href="franklin-7.html">Franklin</a></li>
-            <li><a href="#">Greenville</a></li>
-            <li><a href="#">Springfield</a></li>
+            <li><a href="perston-7.html">Preston</a></li>
+            <li><a href="#">Soda Springs</a></li>
+            <li><a href="#">Fish Haven</a></li>
             <li><a href="#">Storm Center</a></li>
-            <li class="active"><a href="#">Gallery</a></li>
+            <li class="active"><a href="gallery-7.html">Gallery</a></li>
         </ul>		
     </nav>
     <main id="gallery">
