--- a/assignments/lesson-7/perston-7.html
+++ b/assignments/lesson-7/perston-7.html
@@ -26,7 +26,7 @@
     <button onclick="toggleNavMenu()">&#9776;</button>
     <ul id="primaryNav" class="hide">
     	<li><a href="#">Home</a></li>
-    	<li class="active"><a href="#">Preston</a></li>
+    	<li class="active"><a href="perston-7.html">Preston</a></li>
     	<li><a href="#">Soda Springs</a></li>
     	<li><a href="#">Fish Haven</a></li>
     	<li><a href="#">Storm Center</a></li>
