--- a/assignments/lesson-7/gallery-7.html
+++ b/assignments/lesson-7/gallery-7.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Gallery | Dew Report</title>
-    <meta name="author" content="Fred Hicken">
+    <title>Gallery | UI Weather</title>
+    <meta name="author" content="Taylor Williams">
     <meta name="description" content="Image Gallery">  
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
     <link href="styles/normalize.css" rel="stylesheet">
@@ -16,7 +16,7 @@
 
     <header>
         <img src="images/trial-sun.jpg" alt="The site logo">
-        <h1>Dew Report</h1>
+        <h1>UI Weather</h1>
         <div class="subheading">Leave Getting Wet To The Grass</div>
     </header>
 
@@ -97,11 +97,11 @@
     <aside>
         
         123 Main St.<br>
-        Franklin, MU 83454<br>
+        Preston, UT 83454<br>
         (555)555-5555<br>
         contact@support.gov<br>
     </aside>
-    <p class="footer-bar">&copy;2017 All Rights Reserved | Dew Report | <span id="currentdate"></span></p>
+    <p class="footer-bar">&copy;2017 All Rights Reserved | UI Weather | <span id="currentdate"></span></p>
   </footer>
 
   <script src="scripts/hamburger.js"></script>
