--- a/assignments/lesson-7/perston-7.html
+++ b/assignments/lesson-7/perston-7.html
@@ -115,7 +115,7 @@
     <aside>
         
         123 Main St.<br>
-        Preston, MU 83454<br>
+        Preston, UT 83454<br>
         (555)555-5555<br>
         contact@support.gov<br>
     </aside>
