--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <li>Lesson #5: <a href="assignments/lesson-5/perston-5.html">Build Town Page</a></li>
         <li>Lesson #6: <a href="assignments/lesson-6/perston-6.html">Responsive Design</a></li>
         <li>Lesson #7: <a href="assignments/lesson-7/perston-7.html">Flexbox & Grid</a></li>
+        <li>Lesson #8: <a href="assignments/lesson-8/storm-center.html">Storm Center</a></li>
       </ul>
 </main>
 <footer>
