--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <li>Lesson #6: <a href="assignments/lesson-6/perston-6.html">Responsive Design</a></li>
         <li>Lesson #7: <a href="assignments/lesson-7/perston-7.html">Flexbox & Grid</a></li>
         <li>Lesson #8: <a href="assignments/lesson-8/storm-center.html">Storm Center</a></li>
-        <li>Lesson #8: <a href="assignments/lesson-9/heroes.html">Storm Center</a></li>
+        <li>Lesson #8: <a href="assignments/lesson-9/heroes.html">Working with JSON Data</a></li>
       </ul>
 </main>
 <footer>
