--- a/assignments/lesson-9/gallery.html
+++ b/assignments/lesson-9/gallery.html
@@ -23,7 +23,7 @@
     <nav>
         <button onclick="toggleNavMenu()">&#9776;</button>
         <ul id="primaryNav" class="hide">
-            <li><a href="#">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="perston.html">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
             <li><a href="#">Fish Haven</a></li>
