--- a/assignments/lesson-9/index.html
+++ b/assignments/lesson-9/index.html
@@ -19,7 +19,7 @@
         <img src="images/trial-sun.jpg" alt="The site logo">
         <div>
             <h1>UI Weather</h1>
-            <div class="subheading">Leave Getting Wet To The Grass</div>
+            <div class="subheading">The Weather for you and I</div>
         </div>
       </header>
 
@@ -27,7 +27,7 @@
       <nav>
         <button onclick="toggleNavMenu()">&#9776;</button>
         <ul id="primaryNav" class="hide">
-            <li class="active"><a href="#">Home</a></li>
+            <li class="active"><a href="index.html">Home</a></li>
             <li><a href="perston.html">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
             <li><a href="#">Fish Haven</a></li>
