--- a/assignments/lesson-9/storm-center.html
+++ b/assignments/lesson-9/storm-center.html
@@ -38,12 +38,12 @@
     <nav>
         <button onclick="toggleNavMenu()">&#9776;</button>
         <ul id="primaryNav" class="hide">
-            <li><a href="#">Home</a></li>
-            <li><a href="perston-8.html">Preston</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="perston.html">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
             <li><a href="#">Fish Haven</a></li>
-            <li><a href="storm-center.html">Storm Center</a></li>
-            <li class="active"><a href="gallery-8.html">Gallery</a></li>
+            <li class="active"><a href="storm-center.html">Storm Center</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
         </ul>	
     </nav>
     <main id="strm-cntr">
