--- a/assignments/lesson-9/index.html
+++ b/assignments/lesson-9/index.html
@@ -52,7 +52,7 @@
             (555)555-5555<br>
             contact@support.gov<br>
         </aside>
-        <p class="footer-bar">&copy;2017 All Rights Reserved | Dew Report | <span id="currentdate"></span></p>
+        <p class="footer-bar">&copy;2017 All Rights Reserved | UI Weather | <span id="currentdate"></span></p>
     </footer>
 
     <script src="scripts/hamburger.js"></script>
