--- a/assignments/lesson-9/perston.html
+++ b/assignments/lesson-9/perston.html
@@ -41,7 +41,7 @@
                        images/perston-wide/perston-large.jpeg 1100w">
       </figure>
       <section class="weather">
-          <h2>Franklin</h2>
+          <h2>Preston</h2>
           <h3>Weather Summary</h3>
           <div class="current">
               <p id="status"></p>
