--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         <li>Lesson #7: <a href="assignments/lesson-7/perston-7.html">Flexbox & Grid</a></li>
         <li>Lesson #8: <a href="assignments/lesson-8/storm-center.html">Storm Center</a></li>
         <li>Lesson #9: <a href="assignments/lesson-9/heroes.html">Working with JSON Data</a></li>
-        <li>Lesson #10: <a href="assignments/lesson-10/index.html">JSON Home Page</a></li>
+        <li>Lesson #10: <a href="assignments/lesson-10/index.html">Weather Site</a></li>
+        <li>Lesson #11: <a href="assignments/lesson-11/index.html">jQuery Applications</a></li>
       </ul>
 </main>
 <footer>
