--- a/assignments/lesson-10/perston.html
+++ b/assignments/lesson-10/perston.html
@@ -124,7 +124,7 @@
 
   <script src="scripts/hamburger.js"></script>
   <script src="scripts/currentdate.js"></script>
-  <script src="scripts/windchill.js"></script>
+  <script src="scripts/wu-weatherPreston.js"></script>
 
 </body>
 </html>
