--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <li>Lesson #9: <a href="assignments/lesson-9/heroes.html">Working with JSON Data</a></li>
         <li>Lesson #10: <a href="assignments/lesson-10/index.html">Weather Site</a></li>
         <li>Lesson #11: <a href="assignments/lesson-11/index.html">jQuery Applications</a></li>
+        <li>Lesson #11: <a href="assignments/lesson-12/index.html">Weather Site</a></li>
       </ul>
 </main>
 <footer>
