--- a/assignments/lesson-10/storm-center.html
+++ b/assignments/lesson-10/storm-center.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Storm Center | Dew Report</title>
+    <title>Storm Center | UI Weather</title>
     <meta name="author" content="Taylor Williams">
     <meta name="description" content="Storm Center Page">  
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
@@ -30,7 +30,7 @@
         <img src="images/trial-sun.jpg" alt="The site logo">
         <div>
             <h1>UI Weather</h1>
-            <div class="subheading">Leave Getting Wet To The Grass</div>
+            <div class="subheading">Weather for you and I</div>
         </div>
     </header>
 
