--- a/assignments/lesson-10/gallery.html
+++ b/assignments/lesson-10/gallery.html
@@ -17,7 +17,7 @@
     <header>
         <img src="images/trial-sun.jpg" alt="The site logo">
         <h1>UI Weather</h1>
-        <div class="subheading">Leave Getting Wet To The Grass</div>
+        <div class="subheading">Weather for you and I</div>
     </header>
 
     <nav>
