--- a/assignments/lesson-10/thankyou.html
+++ b/assignments/lesson-10/thankyou.html
@@ -18,7 +18,7 @@
         <img src="images/trial-sun.jpg" alt="The site logo">
         <div>
             <h1>UI Weather</h1>
-            <div class="subheading">Leave Getting Wet To The Grass</div>
+            <div class="subheading">Weather for you and I</div>
         </div>
     </header>
 
